mizahi-karakter-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mizahi-karakter-uygulamasi
  labels:
    app: mizahi-karakter-uygulamasi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mizahi-karakter-uygulamasi
  template:
    metadata:
      labels:
        app: mizahi-karakter-uygulamasi
    spec:
      containers:
      - name: mizahi-karakter-uygulamasi
        image: your-dockerhub-username/mizahi-karakter-uygulamasi:latest
        ports:
        - containerPort: 3000
