mizahi-karakter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mizahi-karakter-service
spec:
  type: NodePort
  selector:
    app: mizahi-karakter-uygulamasi
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32000
