wordpress-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
  namespace:  apps 
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
  namespace:  apps
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image: wordpress:6.2.1-apache
        name: wordpress
        resources:
          limits:
            memory: "1Gi"
            cpu: "250m"        
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wp-pv
          mountPath: /var/www/html
      volumes:
      - name: wp-pv
        persistentVolumeClaim:
          claimName: wp-pv-claim
